2004-11-25  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/exchange-hierarchy-webdav.c (init): Was not instantiating
	the FolderSize object properly. Fixed this now.

2004-11-24  Sarfraaz Ahmed <asarfraaz@novell.com>
	
	* storage/main.c (set_online_status)(online_status_changed)
	(setup_offline_listener) : Implemented
	(main) : Added code to invoke the offline listener. As of now this
	does not get compiled unless OFFLINE_SUPPORT is defined manually
	in the Makefile. Planning to remove this once the code is fully done.
	* storage/xc-commmands.c : Removed some unused variables.

2004-11-23  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/exchange-folder-size.c (exchange_folder_size_update):
	Fixed a crash. The private member was being used uninitialised.
	* storage/exchange-hierarchy-webdav.c : Similar
	* storage/exchange-hierarchy-webdav.h : Similar
	* docs/debug : Added some more examples.

2004-11-23  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/xc-commands.c (do_folder_size): Hook for showing the folder
	sizes. Missed this out in my previous commits.

2004-11-12  Not Zed  <NotZed@Ximian.com>

	** merged notzed-messageinfo-branch.

2004-11-10  Sarfraaz Ahmed <asarfraaz@novell.com>
	
	* po/POTFILES.in : Added storage/exchange-folder-size.c and
	storage/exchange-folder-tree.glade

2004-11-10  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/exchange-hierarchy-webdav.c (dispose): Added
	(class_init): Now instantiates the ExchangeFolderSize class
	(exchange_hierarchy_get_folder_size): Returns the foldersize object
	(exchange_hierarchy_webdav_parse_folder): Fetches and updates the 
	folder size
	* storage/exchange-hierarchy-webdav.h : Similar
	* storage/Makefile.am : Added the new files

2004-11-11  Not Zed  <NotZed@Ximian.com>

	* camel/camel-exchange-folder.c
	(camel_exchange_folder_add_message): make it work with message_id
	rather than references->references[0] again.

2004-11-10  Not Zed  <NotZed@Ximian.com>
