@@ -1,3 +1,8 @@
+2004-11-26  Sarfraaz Ahmed <asarfraaz@novell.com>
+
+	* storage/xc-commands.c (do_folder_size_menu) : Have a dummy place
+	holder for the menu item for fodler sizes.
+
 2004-11-25  Sarfraaz Ahmed <asarfraaz@novell.com>
 
 	* storage/exchange-hierarchy-webdav.c (init): Was not instantiating
